fix ie9 grid wraps not respecting container width when containing large image

--- a/scss/core/objects/_grids.scss
+++ b/scss/core/objects/_grids.scss
@@ -45,7 +45,7 @@
 
 	@if $use-legacy-grid {
 		.oldie & {
-			display: table;
+			display: inline;
 			width: 100%;
 		}
 	}
